fixed: home page spacing, social icons spacing remove: code redundancies

--- a/src/components/SocialIcons/socialicons.css
+++ b/src/components/SocialIcons/socialicons.css
@@ -54,18 +54,18 @@
 
 @media (max-width: 1200px) {
   .facebook {
-    margin: 5px;
+    margin: 15px;
   }
   .instagram {
-    margin: 5px;
+    margin: 15px;
   }
   .linkedin {
-    margin: 5px;
+    margin: 15px;
   }
   .twitter {
-    margin: 5px;
+    margin: 15px;
   }
   .youtube {
-    margin: 5px;
+    margin: 15px;
   }
 }
